Fix FAQ title spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1075,10 +1075,6 @@ margin:36px 0px;
   margin:24px 0px;
 }
 
-.faq-title {
-margin-bottom: 24px;
-}
-
 
 
 
